# pong

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
rsc/: icon512x512.xcf
src/: ball.cpp  ball.h  ballonplayercollision.h  command.h  deltatime.h  game.cpp  game.h  inputlistenerobserver.h  keyboardlistener.h  lastframeclock.cpp  lastframeclock.h  main.cpp  moveplayercommand.h  player.cpp  player.h  renderer.cpp  renderer.h  scoreboard.cpp  scoreboard.h  states.h
